# my_repository

./: .gitignore  README.md  index.html  package.json  vite.config.js
.github/workflows/: build-android.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
