[package]
name = "my-tauri-app"
version = "0.1.0"
description = "A Tauri v2 Android app"
authors = ["you"]
edition = "2021"

# Android requires a library crate (cdylib/staticlib)
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize for smaller binary size (important for mobile)
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
